	(twittering-generate-format-table): try to fontify the text with
	entities first.

	* twittering-mode.el: Fix indices in entities of a timeline
	retrieved as XML.
	(twittering-make-gap-list): new function.
	(twittering-get-gap): new function.
	(twittering-normalize-raw-status): correct indices in entities so
	that they mean the position in the decoded text.

2011-08-27  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: A list timeline includes native retweets.
	(twittering-call-api): retrieve a list timeline with native
	retweets.

	* twittering-mode.el: Update the service configuration with the
	'help/configuration' API periodically.
	(twittering-call-api): add `get-service-configuration' as a new
	command.
	(twittering-service-configuration-default): new constant.
	(twittering-service-configuration): new variable.
	(twittering-service-configuration-queried): new variable.
	(twittering-service-configuration-update-interval): new variable.
	(twittering-get-service-configuration): new function.
	(twittering-update-service-configuration): new function.
	(twittering-update-service-configuration-sentinel): new function.
	(twittering-update-service-configuration-clean-up-sentinel): new
	function.
	(twittering-update-active-buffers): invoke
	`twittering-update-service-configuration'.

	* twittering-mode.el: Count characters with considering the t.co
	link wrapper.
	(twittering-effective-length): new function.
	(twittering-edit-length-check): check the length with
	`twittering-effective-length'.
	(twittering-edit-post-status): likewise.
	(twittering-show-minibuffer-length): likewise.

	* twittering-mode.el: Ad-hoc support for non-ASCII hashtags.
	(twittering-extract-timeline-spec): support non-ASCII hashtags by
	an ad-hoc way.
	(twittering-make-fontified-tweet-text): likewise.
	(twittering-edit-skeleton-inherit-hashtags): likewise.

2011-08-18  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Display the requested URI if a HTTP request
	has failed.