@@ -4857,22 +4857,24 @@ GAP-LIST must be generated by `twittering-make-gap-list'."
 		      (encoded (elt entry 2))
 		      (data (assq-get sym-in-data status-data)))
 		 `(,sym . ,(if encoded
-			       (twittering-decode-html-entities data)
+			       (twittering-decode-entities-after-parsing-xml
+				data)
 			     data))))
 	     '(;; Raw entries.
 	       (created-at created_at)
 	       (id id)
+	       (in-reply-to-screen-name in_reply_to_screen_name)
+	       (in-reply-to-status-id in_reply_to_status_id)
 	       (recipient-screen-name recipient_screen_name)
 	       (truncated truncated)
 	       ;; Encoded entries.
-	       (in-reply-to-screen-name in_reply_to_screen_name t)
-	       (in-reply-to-status-id in_reply_to_status_id t)
 	       (text text t)
 	       ))
 	  ;; Entities.
 	  ,(let* ((entity-data (cddr (assq 'entities status-data)))
 		  (encoded-text (assq-get 'text status-data))
-		  (text (twittering-decode-html-entities encoded-text))
+		  (text
+		   (twittering-decode-entities-after-parsing-xml encoded-text))
 		  (gap-list (twittering-make-gap-list text)))
 	     (list
 	      'entity
@@ -5023,6 +5025,40 @@ GAP-LIST must be generated by `twittering-make-gap-list'."
 	  (remove nil (mapcar (lambda (x)
 				(if (consp x) x))
 			      xmltree))))
+
+(defun twittering-decode-entities-after-parsing-xml (encoded-str)
+  "Decode ENCODED-STR retrieved by parsing XML and return the result.
+On Emacs 22 and later, `xml-parse-region' resolves numeric character
+references. It is redundant to resolve numeric character references
+again. However, in a XML response from Twitter, the two characters,
+\"<\" and \">\", are doubly escaped as \"&amp;lt;\" and \"&amp;gt;\",
+respectively. Then, they are represented as \"&lt;\" and \"&gt;\" in
+the result of `xml-parse-region'. This function decodes them.
+
+On Emacs 21, `xml-parse-region' does not resolve numeric character
+references. This function decodes them."
+  (cond
+   ((null encoded-str)
+    "")
+   ((> 22 emacs-major-version)
+    (replace-regexp-in-string
+     "&#\\([0-9]+\\);"
+     (lambda (str)
+       (let ((number-entity
+	      (progn
+		(string-match "&#\\([0-9]+\\);" str)
+		(match-string 1 str))))
+	 (char-to-string
+	  (twittering-ucs-to-char (string-to-number number-entity)))))
+     encoded-str))
+   (t
+    (replace-regexp-in-string
+     "&\\(?:\\(gt\\)\\|\\(lt\\)\\);"
+     (lambda (str)
+       (if (match-beginning 1)
+	   ">"
+	 "<"))
+     encoded-str))))
 
 (defun twittering-decode-html-entities (encoded-str)
   (if encoded-str
